--- a/package.json
+++ b/package.json
@@ -17,25 +17,25 @@
     "@expo/vector-icons": "^14.0.0",
     "@react-navigation/native": "^6.0.2",
     "date-fns": "^3.3.1",
-    "expo": "^50.0.2",
-    "expo-dev-client": "~3.3.6",
+    "expo": "~50.0.7",
+    "expo-dev-client": "~3.3.8",
     "expo-font": "~11.10.2",
     "expo-haptics": "~12.8.1",
     "expo-linking": "~6.2.2",
-    "expo-router": "~3.4.4",
+    "expo-router": "~3.4.7",
     "expo-secure-store": "~12.8.1",
-    "expo-splash-screen": "~0.26.3",
+    "expo-splash-screen": "~0.26.4",
     "expo-status-bar": "~1.11.1",
     "expo-system-ui": "~2.9.3",
-    "expo-web-browser": "~12.8.1",
+    "expo-web-browser": "~12.8.2",
     "react": "18.2.0",
     "react-dom": "18.2.0",
-    "react-native": "0.73.2",
+    "react-native": "0.73.4",
     "react-native-confirmation-code-field": "^7.3.2",
     "react-native-gesture-handler": "~2.14.0",
     "react-native-gifted-chat": "^2.4.0",
     "react-native-mask-input": "^1.2.3",
-    "react-native-reanimated": "~3.6.0",
+    "react-native-reanimated": "~3.6.2",
     "react-native-resegmented-control": "^2.4.0",
     "react-native-safe-area-context": "4.8.2",
     "react-native-screens": "~3.29.0",
@@ -46,7 +46,7 @@
     "@babel/core": "^7.20.0",
     "@types/react": "~18.2.45",
     "jest": "^29.2.1",
-    "jest-expo": "~50.0.1",
+    "jest-expo": "~50.0.2",
     "react-test-renderer": "18.2.0",
     "typescript": "^5.1.3"
   },
